@@ -1,3 +1,7 @@
+2010-08-21  Stas Boukarev  <stassats@gmail.com>
+
+	* slime-fuzzy.el (slime-fuzzy-choices-buffer): XEmacs compatibility.
+
 2010-08-21  Helmut Eller  <heller@common-lisp.net>
 
 	* slime-repl.el: Specify :on-unload action.
